<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/app_container_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/app_container_register"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/applogo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_text_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_to_healthaid"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/email_registered"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@color/light_blue"
                android:text="@string/login"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/register_link"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/new_here_click_to_register"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>